--- a/homework/week_4/scatter.css
+++ b/homework/week_4/scatter.css
@@ -1,2 +1,14 @@
 /*Marc Moorman
 10769781*/
+
+h1 {
+	font-family: arial;
+	font-size: 15px;
+	text-align: right;
+}
+
+h2 {
+	font-family: arial;
+	font-size: 20px;
+	text-align: center;
+}
