--- a/homework/week_4/scatter.css
+++ b/homework/week_4/scatter.css
@@ -1,11 +1,14 @@
 /*Marc Moorman
 10769781*/
 
+body {
+	background-color: lightblue;
+}
+
 h1 {
 	font-family: arial;
 	font-size: 15px;
 	text-align: right;
-	/*background: rgba(0, 250, 250, 1);*/
 }
 
 h2 {
@@ -16,13 +19,19 @@ h2 {
 
 p {
     font-family: arial;
-    font-size: 13px;
+    font-size: 10px;
+    text-align: right;
 }
 
-/*svg { 
-    background-image: url("background.png");
-    background-size: 1000px 400px;
-}*/
+svg { 
+    background-color: rgba(250, 250, 250, 1);
+}
+
+.explanation{
+	text-align: left;
+	font-size: 12px;
+	font-family: arial;
+}
 
 .axisText {
 	font-family: arial;
@@ -75,47 +84,47 @@ p {
 }
 
 /* Dropdown Button */
-.dropbtn {
+/*.dropbtn {
     background-color: #4CAF50;
     color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
-}
+}*/
 
 /* The container <div> - needed to position the dropdown content */
-.dropdown {
+/*.dropdown {
     position: relative;
     display: inline-block;
-}
+}*/
 
 /* Dropdown Content (Hidden by Default) */
-.dropdown-content {
+/*.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-}
+}*/
 
 /* Links inside the dropdown */
-.dropdown-content a {
+/*.dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-}
+}*/
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
+/*.dropdown-content a:hover {background-color: #ddd}
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
+/*.dropdown:hover .dropdown-content {
     display: block;
 }
-
+*/
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
+/*.dropdown:hover .dropbtn {
     background-color: #3e8e41;
-}
+}*/
