--- a/homework/week_5_6/viewedlinks.css
+++ b/homework/week_5_6/viewedlinks.css
@@ -3,3 +3,89 @@ h1 {
 	font-family: arial;
 	font-size: 10px;
 }
+
+h2 {
+	font-family: arial;
+	font-size: 20px;
+	text-align: center;
+}
+
+.axisText {
+	font-family: arial;
+	font-size: 10px;
+}
+
+/*hoovering aspects*/
+.d3-tip {
+  line-height: 1;
+  font-weight: bold;
+  padding: 12px;
+  background: rgba(0, 250, 250, 0.8);
+  color: #000000;
+  border-radius: 2px;
+  font-family: arial;
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(0, 0, 0, 1);
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+}
+
+/* Style northward tooltips differently */
+.d3-tip.n:after {
+  margin: -1px 0 0 0;
+  top: 100%;
+  left: 0;
+}
+
+/*hoover aspects*/
+.rect:hover {
+  fill: lightsteelblue ;
+}
+
+/*dropdown menu make up*/
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    font-family: arial;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    
+}
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+    float: right;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0;
+}
+.dropdown-content a {
+    color: black;
+    font-family: arial;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown a:hover {background-color: #ddd}
+.show {display:block;}
