--- a/homework/week_5_6/viewedlinks.css
+++ b/homework/week_5_6/viewedlinks.css
@@ -97,3 +97,22 @@ h2 {
 }
 .dropdown a:hover {background-color: #ddd}
 .show {display:block;}
+
+#container {
+	width: 800px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+	padding: 20px;
+	background-color: white;
+	box-shadow: 1px 1px 1px 2px rgb(217, 217, 217);
+}
+
+path:hover {
+	fill: rgba(8, 81, 156, 0.2);
+	cursor:pointer;
+}
+
+/*svg {
+	background-color: white;
+}*/
