--- a/homework/week_5_6/viewedlinks.css
+++ b/homework/week_5_6/viewedlinks.css
@@ -1,18 +1,19 @@
+/*
+* Marc Moorman
+* 10769781
+* File for make up of html aspects 
+*/
 h1 {
 	text-align: right;
 	font-family: arial;
 	font-size: 10px;
 }
 
-h2 {
+h2, h3 {
 	font-family: arial;
 	font-size: 20px;
 	text-align: center;
 }
-
-/*body {
-	background-image: url("graduation_hat.png");
-}*/
 
 .axisText {
 	font-family: arial;
@@ -99,20 +100,17 @@ h2 {
 .show {display:block;}
 
 #container {
-	width: 800px;
+	width: 600px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 20px;
 	padding: 20px;
 	background-color: white;
 	box-shadow: 1px 1px 1px 2px rgb(217, 217, 217);
+	float: right;
 }
 
 path:hover {
 	fill: rgba(8, 81, 156, 0.2);
 	cursor:pointer;
 }
-
-/*svg {
-	background-color: white;
-}*/
