--- a/homework/week_5_6/viewedlinks.css
+++ b/homework/week_5_6/viewedlinks.css
@@ -1,18 +1,29 @@
 /*
 * Marc Moorman
 * 10769781
-* File for make up of html aspects 
+* File for make up of HTML 
 */
 h1 {
 	text-align: right;
 	font-family: arial;
 	font-size: 10px;
+  background-color: gold;
 }
 
-h2, h3 {
+div {
+  border-bottom-color: gold;
+}
+
+h2, h3, h4 {
 	font-family: arial;
 	font-size: 20px;
 	text-align: center;
+}
+
+h5 {
+  font-family: arial;
+  font-size: 15px;
+  text-align: center;
 }
 
 .axisText {
@@ -60,6 +71,14 @@ h2, h3 {
   fill: lightsteelblue ;
 }
 
+/*.interaction:hover {
+  fill: grey;
+}
+
+#interaction:hover {
+  fill: grey;
+}*/
+
 /*dropdown menu make up*/
 .dropbtn {
     background-color: #3498DB;
@@ -68,8 +87,7 @@ h2, h3 {
     padding: 16px;
     font-size: 16px;
     border: none;
-    cursor: pointer;
-    
+    cursor: pointer;   
 }
 .dropbtn:hover, .dropbtn:focus {
     background-color: #2980B9;
@@ -77,7 +95,7 @@ h2, h3 {
 .dropdown {
     position: relative;
     display: inline-block;
-    float: right;
+    left: 40%;
 }
 .dropdown-content {
     display: none;
@@ -110,7 +128,21 @@ h2, h3 {
 	float: right;
 }
 
+#country {
+  font-family: arial;
+  font-size: 18px;
+  text-align: center;
+}
+
+#uniText {
+  font-family: arial;
+  font-size: 15px;
+  text-align: center;
+}
+
+/*hovering on country in map*/
 path:hover {
 	fill: rgba(8, 81, 156, 0.2);
 	cursor:pointer;
 }
+
