--- a/homework/week_5_6/viewedlinks.css
+++ b/homework/week_5_6/viewedlinks.css
@@ -1,8 +1,9 @@
 /*
 * Marc Moorman
 * 10769781
-* File for make up of HTML 
+* viewedlinks css file
 */
+
 h1 {
 	text-align: right;
 	font-family: arial;
@@ -24,6 +25,12 @@ h5 {
   font-family: arial;
   font-size: 15px;
   text-align: center;
+}
+
+/*hovering on country in map*/
+path:hover {
+  fill: rgba(255,191,0, 0.7);
+  cursor: pointer;
 }
 
 .axisText {
@@ -62,62 +69,39 @@ h5 {
   left: 0;
 }
 
-/*hoover aspects*/
-/*.rect {
-	fill: grey;
-}*/
-
 .rect:hover {
-  fill: lightsteelblue ;
+  fill: gold ;
 }
 
-/*.interaction:hover {
-  fill: grey;
-}
-
-#interaction:hover {
-  fill: grey;
-}*/
-
-/*dropdown menu make up*/
-.dropbtn {
-    background-color: #3498DB;
-    color: white;
-    font-family: arial;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;   
-}
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-}
+/*dropdown menu make up   #3498DB*/
 .dropdown {
     position: relative;
     display: inline-block;
-    left: 40%;
+    float: inherit;
 }
-.dropdown-content {
+.dropdown-menu {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    min-width: 50px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     right: 0;
 }
-.dropdown-content a {
-    color: black;
-    font-family: arial;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-.dropdown a:hover {background-color: #ddd}
-.show {display:block;}
 
-#container {
+#containerBarChart {
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 1px 1px 1px 2px rgb(217, 217, 217);
+  float: right;
+}
+
+#containerMap {
 	width: 600px;
 	margin-left: auto;
 	margin-right: auto;
@@ -139,14 +123,4 @@ h5 {
   font-family: arial;
   font-size: 15px;
   text-align: center;
-}
-
-/*hovering on country in map*/
-path:hover {
-	fill: rgba(8, 81, 156, 0.2);
-	cursor:pointer;
-}
-
-#legend {
-  background-color: red;
 }
