--- a/homework/week_5_6/viewedlinks.css
+++ b/homework/week_5_6/viewedlinks.css
@@ -1,7 +1,7 @@
 /*
 * Marc Moorman
 * 10769781
-* viewedlinks css file
+* Viewedlinks css file
 */
 
 /* header make up*/
@@ -9,11 +9,11 @@ h1 {
 	text-align: right;
 	font-family: arial;
 	font-size: 10px;
-  background-color: gold;
+  background-color: rgba(255,191,0, 0.7);
 }
 
 div {
-  border-bottom-color: gold;
+  border-bottom-color: rgba(255,191,0, 0.7); /*gold;*/
 }
 
 h2, h3, h4 {
@@ -26,6 +26,13 @@ h5 {
   font-family: arial;
   font-size: 15px;
   text-align: center;
+}
+
+body {
+  background-image: url("background.png");
+  background-size: 500px, 300px;
+  background-repeat: no-repeat;
+  background-position: 0% 20% ; 
 }
 
 /* hoover make up map*/
@@ -92,11 +99,22 @@ path:hover {
 }
 
 /* make up for containers content*/
-#containerBarChart {
+#description {
   width: 600px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 1px 1px 1px 2px rgb(217, 217, 217);
+  float: inherit;
+}
+
+#containerBarChart {
+  width: 600px;
+  margin-left: auto;
+  margin-right: 10px;
+  margin-top: 50px;
   padding: 20px;
   background-color: white;
   box-shadow: 1px 1px 1px 2px rgb(217, 217, 217);
@@ -105,13 +123,13 @@ path:hover {
 
 #containerMap {
 	width: 600px;
-	margin-left: auto;
+	margin-left: 10px;
 	margin-right: auto;
-	margin-top: 20px;
+	margin-top: 50px;
 	padding: 20px;
 	background-color: white;
 	box-shadow: 1px 1px 1px 2px rgb(217, 217, 217);
-	float: right;
+	float: left;
 }
 
 #country {
